--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,13 +12,21 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+
   dio: 4.0.1
   get_it: 7.2.0
+
+  mobx: 2.0.5
+  flutter_mobx: 2.0.2
+
+  shimmer: 2.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.0
+  flutter_lints: 1.0.4
+  build_runner: 2.1.4
+  mobx_codegen: 2.0.4
 
 flutter:
   uses-material-design: true
